refactor: resolve SonarQube code smells in services